inserita struttura body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <title>Paper scientifico</title>
     </head>
     <body>
-        
+        <!-- intestazione pagina -->
+        <head></head>
+        <!-- /intestazione pagina -->
+        <!-- corpo della pagina -->
+        <main></main>
+        <!-- /corpo della pagina -->
+        <!-- footer della pagina  -->
+        <footer></footer>
+        <!-- /footer della pagina  -->
     </body>
 </html>
