--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     </head>
     <body>
         <!-- intestazione pagina -->
-        <head></head>
+        <head>
+            <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+            <hr>
+            <!-- informazione autore -->
+            <div>
+                <h3>Gert Cauwenberghs</h3>
+                <div>
+                    CLSP, ECE Dept. <br>
+                    Jhons Hopkins University <br>
+                    Baltimore, MD 21218 <br>
+                    <em>gert@jhu.edu </em><br>
+                </div>
+            </div>
+            <!-- /informazione autore -->
+        </head>
         <!-- /intestazione pagina -->
         <!-- corpo della pagina -->
         <main></main>
