sistemato tag header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!-- intestazione pagina -->
-        <head>
+        <header>
             <h1>Incremental and Decremental Support Vector Machine Learning</h1>
             <hr>
             <!-- informazione autore -->
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <!-- /informazione autore -->
-        </head>
+        </header>
         <!-- /intestazione pagina -->
         <!-- corpo della pagina -->
         <main></main>
