--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         </main>
         <!-- /corpo della pagina -->
         <!-- footer della pagina  -->
-        <footer></footer>
+        <footer>
+            <!-- link -->
+            <a href="https://en.wikipedia.org/wiki/Support-vector_machine" target="_blank">Vai su Wikipedia per saperne di più</a>
+            <!-- /link  -->
+        </footer>
         <!-- /footer della pagina  -->
     </body>
 </html>
